added folio pages spec tests

--- a/app/views/folios/show.html.erb
+++ b/app/views/folios/show.html.erb
@@ -1,5 +1,3 @@
-<% provide(:title, "Show Task") %>
+<% provide(:title, "Show Folio") %>
 
-<h1>I need to...</h1>
-
-<p>Title: <%= @folio.title %></p>
+<h1><%= @folio.title %> Folio</h1>
