--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,7 +21,7 @@
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="">My Folios</a></li>
+              <li><%= link_to "My Folios", folios_path %></li>
               <li><%= link_to "View My Profile", current_user %></li>
               <li class="divider"></li>
               <li>
