--- a/app/views/folios/index.html.erb
+++ b/app/views/folios/index.html.erb
@@ -1,14 +1,14 @@
 <% provide(:title, "All Folios") %>
 
 <div class="title">
-  <h1 class="text-center">All Folios</h1>
+  <h1>All Folios</h1>
+  <%= link_to 'Create New Folio', new_folio_path, class: "btn btn-default" %>
 </div>
 
 <table class="table table-striped">
   <tr>
     <th>Title</th>
-    <th colspan="2"></th>
-    <th><%= link_to 'Create New Folio', new_folio_path, class: "btn btn-default" %></th>
+    <th colspan="3"></th>
   </tr>
  
   <% @folios.each do |folio| %>
