--- a/app/views/folios/new.html.erb
+++ b/app/views/folios/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "New Task") %>
+<% provide(:title, "New Folio") %>
 
-<h1>I need to...</h1>
+<h1>Create New Folio</h1>
 
 <%= render 'form' %>
