--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
 <% provide(:title, "Home") %>
-<h1>Welcome</h1>
+<h1>Welcome to TrailFolio</h1>
+<h4>Search for trails in your city...keep track of your adventures...sign up to begin!</h4>
+<%= link_to "Sign Up", signup_path, class: "btn btn-default" %>
