adding bootstrap custom styling to app

--- a/app/views/folios/new.html.erb
+++ b/app/views/folios/new.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "New Folio") %>
 
-<h1>Create New Folio</h1>
-
-<%= render 'form' %>
+<div class="container">
+  <h1 class="text-center">Create New Folio</h1>
+  <p><%= render 'form' %></p>
+</div>
