--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,8 @@
 <% provide(:title, "Help") %>
-<h1>Help/FAQ</h1>
-<p>Try-hard cred squid, gastropub PBR put a bird on it beard ethical readymade Pitchfork +1 Helvetica mumblecore cornhole biodiesel. Trust fund gastropub messenger bag ennui roof party.</p>
-<ul>
-  <li>IPhone tilde DIY hoodie, McSweeney's deep v pop-up literally. Art party literally single-origin coffee, try-hard fashion axe tattooed wolf brunch Wes Anderson pour-over jean shorts beard.</li>
-  <li>Taxidermy mustache health goth tousled pour-over, street art salvia fanny pack artisan. Try-hard cred squid, gastropub PBR put a bird on it beard ethical readymade Pitchfork +1 Helvetica mumblecore cornhole biodiesel.</li>
-  <li>Hashtag try-hard vegan occupy. Kogi kale chips Shoreditch, Brooklyn forage Kickstarter hashtag skateboard you probably haven't heard of them actually XOXO quinoa.</li>
-  <li>Trust fund gastropub messenger bag ennui roof party. Art party literally single-origin coffee, try-hard fashion axe tattooed wolf brunch Wes Anderson pour-over jean shorts beard.</li>
-</ul>
+
+<div class="container">
+  <h1 class="text-center">Help/FAQ</h1>
+  <p>Try-hard cred squid, gastropub PBR put a bird on it beard ethical readymade Pitchfork +1 Helvetica mumblecore cornhole biodiesel. Trust fund gastropub messenger bag ennui roof party.</p>
+  <p>IPhone tilde DIY hoodie, McSweeney's deep v pop-up literally. Art party literally single-origin coffee, try-hard fashion axe tattooed wolf brunch Wes Anderson pour-over jean shorts beard. Taxidermy mustache health goth tousled pour-over, street art salvia fanny pack artisan. Try-hard cred squid, gastropub PBR put a bird on it beard ethical readymade Pitchfork +1 Helvetica mumblecore cornhole biodiesel.</p>
+  <p>Hashtag try-hard vegan occupy. Kogi kale chips Shoreditch, Brooklyn forage Kickstarter hashtag skateboard you probably haven't heard of them actually XOXO quinoa. Trust fund gastropub messenger bag ennui roof party. Art party literally single-origin coffee, try-hard fashion axe tattooed wolf brunch Wes Anderson pour-over jean shorts beard.</p>
+</div>
