--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
 <% provide(:title, "Home") %>
-<h1>Welcome to TrailFolio</h1>
-<h4>Search for trails in your city...keep track of your adventures...sign up to begin!</h4>
-<%= link_to "Sign Up", signup_path, class: "btn btn-default" %>
+
+<div class="container text-center">
+  <h1>Welcome to TrailFolio</h1>
+  <p class="lead">Search for trails in your city...Keep track of your adventures</p>
+  <p><%= link_to "Sign Up To Begin!", signup_path, class: "btn btn-primary btn-lg" %></p>
+</div>
