--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, "Sign Up") %>
-<h1>Sign Up</h1>
 
-<%= render 'form' %>
+<div class="container">
+  <h1 class="text-center">Sign Up</h1>
+  <p><%= render 'form' %></p>
+</div>
