--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,11 +11,11 @@
  * file per style scope.
  *
 
- @import "bootstrap-sprockets"
- @import "bootstrap"
+ *= import "bootstrap-sprockets"
+ *= import "bootstrap"
  *= import "font-awesome-sprockets"
  *= import "font-awesome"
  *= require_tree .
- *= require_custom
+ *= require custom
  *= require_self
  */
