--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,26 @@
-body { 
-  padding-top: 70px;
+body {
+}
+
+p {
+  padding: 10px;
+}
+
+.jumbotron {
+  padding-top: 28px;
+  padding-bottom: 18px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.btn-center {
+  margin: 0 auto;
+}
+
+select {
+  margin: 10px;
+}
+
+.user-form {
+  width: 50%;
+  margin: 0 auto;
 }
