--- a/app/views/folios/_form.html.erb
+++ b/app/views/folios/_form.html.erb
@@ -1,15 +1,12 @@
-<%= form_for(@folio) do |f| %>
-
-  <%= render 'shared/error_messages', object: f.object %>
-
-  <div>
-    <%= f.label :title %>:
-    <%= f.text_field :title %>
-  </div>
-  <br />
-  
-  <div>
-    <%= f.submit 'Save' %>
-  </div>
-
-<% end %>
+<div class="user-form">
+  <%= form_for(@folio) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <div>
+      <%= f.label :title, class: "control-label" %>
+      <%= f.text_field :title, class: "form-control input-sm", autofocus: true  %>
+      <br />
+      <%= f.submit 'Save', class: "btn btn-large btn-primary btn-block" %>
+    </div>
+    <p class="text-center"><%= link_to "...back to previous page", :back %></p>
+  <% end %>
+</div>
