--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, "About") %>
-<h1>About</h1>
-<p>Hashtag try-hard vegan occupy. Kogi kale chips Shoreditch, Brooklyn forage Kickstarter hashtag skateboard you probably haven't heard of them actually XOXO quinoa. IPhone tilde DIY hoodie, McSweeney's deep v pop-up literally. Art party literally single-origin coffee, try-hard fashion axe tattooed wolf brunch Wes Anderson pour-over jean shorts beard. Taxidermy mustache health goth tousled pour-over, street art salvia fanny pack artisan. Try-hard cred squid, gastropub PBR put a bird on it beard ethical readymade Pitchfork +1 Helvetica mumblecore cornhole biodiesel. Trust fund gastropub messenger bag ennui roof party.</p>
 
-<%= link_to "Sign Up", signup_path, class: "btn btn-default" %>
+<div class="container">
+  <h1 class="text-center">About</h1>
+  <p class="lead">Hashtag try-hard vegan occupy. Kogi kale chips Shoreditch, Brooklyn forage Kickstarter hashtag skateboard you probably haven't heard of them actually XOXO quinoa. IPhone tilde DIY hoodie, McSweeney's deep v pop-up literally. Art party literally single-origin coffee, try-hard fashion axe tattooed wolf brunch Wes Anderson pour-over jean shorts beard. Taxidermy mustache health goth tousled pour-over, street art salvia fanny pack artisan. Try-hard cred squid, gastropub PBR put a bird on it beard ethical readymade Pitchfork +1 Helvetica mumblecore cornhole biodiesel. Trust fund gastropub messenger bag ennui roof party.</p>
+  <div class="text-center">
+    <%= link_to "Sign Up", signup_path, class: "btn btn-primary btn-lg" %>
+  </div>
+</div>
