--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -1,71 +1,65 @@
-<h1>Search Results</h1>
+<div class="container">
+  <div class="jumbotron text-center">
+    <h1 class="text-center">Search for Trails:</h1>
+    <%= form_tag trails_path, :method => 'get' do %>
+      <%= select_tag :activity_type_name, options_for_select([["Choose One",""],
+                                                              ["Hiking","hiking"],
+                                                              ["Mountain biking","mountain biking"],
+                                                              ["Campgrounds","campgrounds"], 
+                                                              ["Trail Running","trail running"],
+                                                              ["Skiing / Snowboarding","snow sports"],
+                                                              ["Caving","caving"],
+                                                              ["Horseback Riding","horseback riding"]]) %><br />
+      <%= text_field_tag :city, params[:city] %>
+      <%= submit_tag "Search", :name => nil %>
+      <br />
+      <p class="text-center"><small><%= link_to "...back to previous page", :back %></small></p>
+    <% end %>
+  </div>
 
-<div>
-  <%= form_tag trails_path, :method => 'get' do %>
-    <%# select_tag %>
-    <%= select_tag :activity_type_name, options_for_select([["Choose One",""],["Hiking","hiking"],["Mountain biking","mountain biking"],
-                                                            ["Campgrounds","campgrounds"], ["Trail Running","trail running"],
-                                                            ["Skiing / Snowboarding","snow sports"],["Caving","caving"],
-                                                            ["Horseback Riding","horseback riding"]]) %> 
-    <%= text_field_tag :city, params[:city] %>
-    <%= submit_tag "Search", :name => nil, class: "text-center" %>
-    <br />
-    <%= link_to "View my profile", current_user %>
-  <% end %>
-</div>
+  <% unless @response.nil? %>
+  <hr />
+    <% @response["places"].each do |place| %>
+      <%# Make helper to clean up this link %>
+      <%# save_trail(activity: "hiking", state: "Georgia", city: "Atlanta") %>
+      <div class="panel panel-default">
+        <div class="panel-heading">Trail Name:</div>
+        <div class="panel-body"><%= place["name"] %></div>
 
-
-
-<!-- <div>
-  <%# form_tag trails_path, :method => 'get' do %>
-    <%# select_tag %>
-    Activity Type: <%# text_field_tag :activity_type_name, params[:activity_type_name] %> 
-    City: <%# text_field_tag :city, params[:city] %>
-    <%# submit_tag "Search", :name => nil, class: "text-center" %>
-    <br />
-    <%# link_to "View my profile", current_user %>
-  <%# end %>
-</div> -->
-
-<% unless @response.nil? %>
-  <% @response["places"].each do |place| %>
-    <%# link_to "Add to the only Folio we've created", trails_path(trail: { activity_type_name: "hiking", city: "Atlanta" }), method: :post %>
-    <%# Make helper to clean up this link %>
-    <%# save_trail(activity: "hiking", state: "Georgia", city: "Atlanta") %>
-    <ul>
-      <h4><li><%= place["name"] %></li></h4>
-      <h5>Location:</h5>
-      <%= place["city"] %>,
-      <%= place["state"] %>
-      <% unless place["directions"].nil? %>
-        <h5>Directions:</h5>
-        <%= place["directions"].gsub("&quot;", "") %>
-      <% end %>
-      <% if place["activities"].blank? %>
-        <%# Fix this guy similar to form below %>
-        <%= link_to "Add to the only Folio we've created", trails_path(trail: { name: place["name"], 
-                                                                       activity_type_name: "hiking", 
-                                                                       city: place["city"],  
-                                                                       state: place["state"] }), method: :post %>
-      <% else %>
-        <h5>Activities:</h5>
-        <% place["activities"].each do |activity| %>
-          <ul>
-            <li><%= activity["activity_type_name"].capitalize %></li>
-            <li><%= activity["description"].gsub("&quot;", '"') %></li>
-          </ul>
-          <%= form_for(:trail, url: trails_path) do |f| %>
-            <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
-            <%= f.hidden_field :name, value: place["name"] %>
-            <%= f.hidden_field :activity_type_name, value: activity["activity_type_name"] %>
-            <%= f.hidden_field :directions, value: place["directions"] %>
-            <%= f.hidden_field :city, value: place["city"] %>
-            <%= f.hidden_field :state, value: place["state"] %>
-            <%= f.hidden_field :description, value: activity["description"] %>
-            <%= f.submit "Add to Folio" %>
+        <div class="panel-heading">Location:</div>
+        <div class="panel-body"><%= city(place) %>, <%= place["state"] %></div>
+        
+          <% unless place["directions"].nil? %>
+            <div class="panel-heading">Directions:</div>
+            <div class="panel-body"><%= place["directions"].gsub("&quot;", "") %></div>
+          <% end %>
+        
+          <% if place["activities"].blank? %>
+            <%= link_to "Add to the only Folio we've created", trails_path(trail: { name: place["name"], 
+                                                                           activity_type_name: "hiking", 
+                                                                           city: place["city"],  
+                                                                           state: place["state"] }), method: :post %>
+          <% else %>
+            <div class="panel-heading">Activities:</div>
+            <% place["activities"].each do |activity| %>
+            <div class="panel-body">
+              <ul>
+                <li><%= activity["activity_type_name"].capitalize %></li>
+                <li><%= activity["description"].gsub("&quot;", '"') %></li>
+              </ul>
+            </div>
+            <%= form_for(:trail, url: trails_path) do |f| %>
+              <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
+              <%= f.hidden_field :name, value: place["name"] %>
+              <%= f.hidden_field :activity_type_name, value: activity["activity_type_name"] %>
+              <%= f.hidden_field :directions, value: place["directions"] %>
+              <%= f.hidden_field :city, value: place["city"] %>
+              <%= f.hidden_field :state, value: place["state"] %>
+              <%= f.submit "Add to Folio" %>
+            <% end %>
           <% end %>
         <% end %>
-      <% end %>
-    </ul>
+      </div>
+    <% end %>
   <% end %>
-<% end %>  
+</div>
