--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,32 +1,22 @@
-<%= form_for(@user) do |f| %>
-
-  <%= render 'shared/error_messages', object: f.object %>
-
-  <div>
-    <%= f.label :name %>:
-    <%= f.text_field :name %>
+<div class="user-form">
+  <%= form_for(@user) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <div>
+      <%= f.label :name, class: "control-label" %>
+      <%= f.text_field :name, class: "form-control input-sm", autofocus: true  %>
+      <br />
+      <%= f.label :email, class: "control-label" %>
+      <%= f.text_field :email, class: "form-control input-sm" %> 
+      <br />
+      <%= f.label :password, class: "control-label" %>
+      <%= f.password_field :password, class: "form-control input-sm" %>
+      <br />
+      <%= f.label :password_confirmation, "Confirmation", class: "control-label"  %>
+      <%= f.password_field :password_confirmation, class: "form-control input-sm" %>
+      <br />
+      <%= f.submit 'Create an account', class: "btn btn-large btn-primary btn-block" %>
+    <% end %>
   </div>
   <br />
-
-  <div>
-    <%= f.label :email %>:
-    <%= f.text_field :email %> 
-  </div>
-  <br />
-
-  <div>
-    <%= f.label :password %>:
-    <%= f.text_field :password %>
-  </div>
-  <br />
-
-  <div>
-    <%= f.label :password_confirmation %>:
-    <%= f.text_field :password_confirmation %>
-  </div>
-  <br />
-  <div>
-    <%= f.submit 'Submit' %>
-  </div>
-  
-<% end %>
+  <p class="text-center">Already a user? <%= link_to "Sign in!", signin_path %></p
+</div>
