--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,14 @@
 <% provide(:title, @user.name) %>
 
-<h1><%= @user.name %></h1>
-
-<hr />
-<p><%= link_to "Search for trails", trails_path, class: "btn btn-default" %><p>
-
-<p><%= link_to "View my folios", folios_path, class: "btn btn-default" %></p>
+<div class="container text-center">
+  <h1>Hi <%= @user.name %>!</h1>
+  <br />
+  <hr />
+  <br />
+  <p class="lead">Choose a button below to get started:</p>  
+  <div class="row">
+    <div class="col-md-4"><%= link_to "1. Create new folio", new_folio_path, class: "btn btn-primary btn-lg btn-block" %></div>
+    <div class="col-md-4"><%= link_to "2. Search for trails", trails_path, class: "btn btn-primary btn-lg btn-block" %></p></div>
+    <div class="col-md-4"><%= link_to "3. View my folios", folios_path, class: "btn btn-primary btn-lg btn-block" %></p></div>
+  </div>
+</div>
