reformat trails index form

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Home") %>
-
-<div class="container text-center">
+<img src="http://i.imgur.com/7t2RjAL.jpg?1" title="source: imgur.com" id="bg-home" />
+<div id="home" class="jumbotron text-center">
   <h1>Welcome to TrailFolio</h1>
-  <p class="lead">Search for trails in your city...Keep track of your adventures</p>
+  <p class="lead">Search for trails...Keep track of your adventures</p>
   <p><%= link_to "Sign Up To Begin!", signup_path, class: "btn btn-primary btn-lg" %></p>
 </div>
