--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,5 @@
+@import "bootstrap";
+
 body {
 }
 
@@ -5,11 +7,41 @@ p {
   padding: 10px;
 }
 
+a {
+  color: #799c57;
+}
+
+#bg-home {
+  position: fixed; 
+  top: 0; 
+  left: 0;  
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
+
+.navbar {
+  border-radius: 0px;
+}
+
+.navbar-default {
+  opacity: .8;
+}
+
 .jumbotron {
-  padding-top: 28px;
+  padding-top: 128px;
   padding-bottom: 18px;
   width: 80%;
   margin: 0 auto;
+  background: transparent;
+}
+
+#home h1 {
+  color: #ffffff;
+}
+
+#home p {
+  color: #ffffff;
 }
 
 .btn-center {
@@ -20,7 +52,34 @@ select {
   margin: 10px;
 }
 
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
+  margin-top: 5px;
+  margin-bottom: 15px;
+  background-color: #8EB566;
+  border-color: #8EB566;
+  border: none;
+}
+
+input[type='text']:focus{
+ outline:none;
+ border-color: #8EB566;
+}
+
 .user-form {
   width: 50%;
   margin: 0 auto;
+}
+
+.btn-primary {
+  background-color: #8EB566;
+  border-color: #8EB566;
+}
+
+.btn-primary:hover {
+  background-color: #799c57;
+  border-color: #799c57;
+}
+
+.autofocus {
+  border-color: #799c57;
 }
