--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,8 +20,9 @@
             Account <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "My Folios", folios_path %></li>
             <li><%= link_to "View My Profile", current_user %></li>
+            <li><%= link_to "Create new folio", new_folio_path %></li>
+            <li><%= link_to "View My Folios", folios_path %></li>
             <li class="divider"></li>
             <li>
               <%= link_to "Sign Out", signout_path, method: "delete" %>
