--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -23,24 +23,27 @@
       <%# Make helper to clean up this link %>
       <%# save_trail(activity: "hiking", state: "Georgia", city: "Atlanta") %>
       <div class="panel panel-default">
-        <div class="panel-heading">Trail Name:</div>
-        <div class="panel-body"><%= place["name"] %></div>
+        <div class="panel-heading"><h3>Trail Name: <%= place["name"] %></h3></div>
 
-        <div class="panel-heading">Location:</div>
-        <div class="panel-body"><%= city(place) %>, <%= place["state"] %></div>
+        <div class="panel-body">Location: <%= city(place) %>, <%= place["state"] %></div>
         
           <% unless place["directions"].nil? %>
-            <div class="panel-heading">Directions:</div>
-            <div class="panel-body"><%= place["directions"].gsub("&quot;", "") %></div>
+            <div class="panel-body">Directions: <%= place["directions"].gsub("&quot;", "") %></div>
           <% end %>
         
           <% if place["activities"].blank? %>
-            <%= link_to "Add to the only Folio we've created", trails_path(trail: { name: place["name"], 
-                                                                           activity_type_name: "hiking", 
-                                                                           city: place["city"],  
-                                                                           state: place["state"] }), method: :post %>
+            <div class="panel-body text-center">            
+              <%= form_for(:trail, url: trails_path) do |f| %>
+                <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
+                <%= f.hidden_field :name, value: place["name"] %>
+                <%= f.hidden_field :directions, value: place["directions"] %>
+                <%= f.hidden_field :city, value: place["city"] %>
+                <%= f.hidden_field :state, value: place["state"] %><br />
+                <%= f.submit "Add to Folio" %>
+              <% end %>
+            </div>
           <% else %>
-            <div class="panel-heading">Activities:</div>
+            <div class="panel-body">Activities:</div>
             <% place["activities"].each do |activity| %>
             <div class="panel-body">
               <ul>
@@ -48,15 +51,17 @@
                 <li><%= activity["description"].gsub("&quot;", '"') %></li>
               </ul>
             </div>
-            <%= form_for(:trail, url: trails_path) do |f| %>
-              <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
-              <%= f.hidden_field :name, value: place["name"] %>
-              <%= f.hidden_field :activity_type_name, value: activity["activity_type_name"] %>
-              <%= f.hidden_field :directions, value: place["directions"] %>
-              <%= f.hidden_field :city, value: place["city"] %>
-              <%= f.hidden_field :state, value: place["state"] %>
-              <%= f.submit "Add to Folio" %>
-            <% end %>
+            <div class="panel-body text-center">
+              <%= form_for(:trail, url: trails_path) do |f| %>
+                <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
+                <%= f.hidden_field :name, value: place["name"] %>
+                <%= f.hidden_field :activity_type_name, value: activity["activity_type_name"] %>
+                <%= f.hidden_field :directions, value: place["directions"] %>
+                <%= f.hidden_field :city, value: place["city"] %>
+                <%= f.hidden_field :state, value: place["state"] %><br />
+                <%= f.submit "Add to Folio" %>
+              <% end %>
+            </div>
           <% end %>
         <% end %>
       </div>
