--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,7 +29,7 @@ a {
 }
 
 .jumbotron {
-  padding-top: 128px;
+  padding-top: 85px;
   padding-bottom: 18px;
   width: 80%;
   margin: 0 auto;
@@ -83,3 +83,9 @@ input[type='text']:focus{
 .autofocus {
   border-color: #799c57;
 }
+
+.panel-default {
+  width: 75%;
+  margin: 20px auto 30px;
+}
+
