--- a/app/views/folios/edit.html.erb
+++ b/app/views/folios/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit Folio") %>
-
-<h1>Edit Folio</h1>
-
-<%= render 'form' %>
+<div class="jumbotron">
+  <h1 class="text-center">Edit Folio</h1>
+  <%= render 'form' %>
+</div>
