--- a/app/views/folios/new.html.erb
+++ b/app/views/folios/new.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "New Folio") %>
 
 <div class="container">
-  <h1 class="text-center">Create New Folio</h1>
-  <p><%= render 'form' %></p>
+  <div class="jumbotron">
+    <h1 class="text-center">Create New Folio</h1>
+    <p><%= render 'form' %></p>
+  </div>
 </div>
