--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,19 +10,21 @@
     <a class="navbar-brand" href="/">TrailFolio</a>
   </div>
 
-  <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav navbar-left">
       <li><a href="/about">About</a></li>
-      <li><a href="/help">Help</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+<!--       <li><a href="/help">Help</a></li> -->
       <% if signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Account <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "View My Profile", current_user %></li>
+            <li><%= link_to "View my profile", current_user %></li>
             <li><%= link_to "Create new folio", new_folio_path %></li>
-            <li><%= link_to "View My Folios", folios_path %></li>
+            <li><%= link_to "Search for trails", trails_path %></li>
             <li class="divider"></li>
             <li>
               <%= link_to "Sign Out", signout_path, method: "delete" %>
