--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -1,69 +1,36 @@
 <div class="container">
   <div class="jumbotron text-center">
     <h1 class="text-center">Search for Trails:</h1>
-    <%= form_tag trails_path, :method => 'get' do %>
-      <%= select_tag :activity_type_name, options_for_select([["Choose One",""],
-                                                              ["Hiking","hiking"],
-                                                              ["Mountain biking","mountain biking"],
-                                                              ["Campgrounds","campgrounds"], 
-                                                              ["Trail Running","trail running"],
-                                                              ["Skiing / Snowboarding","snow sports"],
-                                                              ["Caving","caving"],
-                                                              ["Horseback Riding","horseback riding"]]) %><br />
-      <%= text_field_tag :city, params[:city] %>
-      <%= submit_tag "Search", :name => nil %>
-      <br />
-      <p class="text-center"><small><%= link_to "...back to previous page", :back %></small></p>
-    <% end %>
+    <%= render 'search_trails' %>
   </div>
 
   <% unless @response.nil? %>
-  <hr />
+    <hr />
     <% @response["places"].each do |place| %>
-      <%# Make helper to clean up this link %>
-      <%# save_trail(activity: "hiking", state: "Georgia", city: "Atlanta") %>
       <div class="panel panel-default">
         <div class="panel-heading"><h3>Trail Name: <%= place["name"] %></h3></div>
-
-        <div class="panel-body">Location: <%= city(place) %>, <%= place["state"] %></div>
-        
+        <div class="panel-body">
+          <h4>Location:</h4>
+          <p><%= city(place) %>, <%= place["state"] %></p>
           <% unless place["directions"].nil? %>
-            <div class="panel-body">Directions: <%= place["directions"].gsub("&quot;", "") %></div>
+            <h4>Directions:</h4>
+            <p><%= place["directions"].gsub("&quot;", "") %></p>
           <% end %>
-        
           <% if place["activities"].blank? %>
-            <div class="panel-body text-center">            
-              <%= form_for(:trail, url: trails_path) do |f| %>
-                <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
-                <%= f.hidden_field :name, value: place["name"] %>
-                <%= f.hidden_field :directions, value: place["directions"] %>
-                <%= f.hidden_field :city, value: place["city"] %>
-                <%= f.hidden_field :state, value: place["state"] %><br />
-                <%= f.submit "Add to Folio" %>
-              <% end %>
-            </div>
+            <%= render 'folio_selector_activity_blank' %>
           <% else %>
-            <div class="panel-body">Activities:</div>
+            <h4>Activities:</h4>
             <% place["activities"].each do |activity| %>
-            <div class="panel-body">
               <ul>
                 <li><%= activity["activity_type_name"].capitalize %></li>
                 <li><%= activity["description"].gsub("&quot;", '"') %></li>
-              </ul>
-            </div>
-            <div class="panel-body text-center">
-              <%= form_for(:trail, url: trails_path) do |f| %>
-                <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
-                <%= f.hidden_field :name, value: place["name"] %>
-                <%= f.hidden_field :activity_type_name, value: activity["activity_type_name"] %>
-                <%= f.hidden_field :directions, value: place["directions"] %>
-                <%= f.hidden_field :city, value: place["city"] %>
-                <%= f.hidden_field :state, value: place["state"] %><br />
-                <%= f.submit "Add to Folio" %>
-              <% end %>
-            </div>
+              </ul>              
+              <div class="text-center">
+                <%= render 'folio_selector', place: place, activity: activity %>
+              </div>
+            <% end %>
           <% end %>
-        <% end %>
+        </div>
       </div>
     <% end %>
   <% end %>
