reworded about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
 <div id="home" class="container">
   <div class="jumbotron">
     <h1 class="text-center">About</h1>
-    <p class="lead text-center">Trailfolio was created to helps you plan your next adventure by searching for trails by location and type. You can create 'folios' and save trails that you would like to visit.</p>
+    <p class="lead text-center">Trailfolio was created to help you plan your next adventure! Search for trails by location and type then save them to 'folios' to keep track of trails and organize your trip.</p>
     <p class="lead text-center">Start planning today!</p>
     <div class="text-center">
       <%= link_to "Sign Up", signup_path, class: "btn btn-primary btn-lg" %>
