--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -17,7 +17,14 @@
             <p><%= place["directions"].gsub("&quot;", "") %></p>
           <% end %>
           <% if place["activities"].blank? %>
-            <%= render 'folio_selector_activity_blank' %>
+            <%= form_for(:trail, url: trails_path) do |f| %>
+              <%= f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]})) %>
+              <%= f.hidden_field :name, value: place["name"] %>
+              <%= f.hidden_field :directions, value: place["directions"] %>
+              <%= f.hidden_field :city, value: place["city"] %>
+              <%= f.hidden_field :state, value: place["state"] %><br />
+              <%= f.submit "Add to Folio" %>
+            <% end %>
           <% else %>
             <h4>Activities:</h4>
             <% place["activities"].each do |activity| %>
