update image on all pages

--- a/app/views/folios/edit.html.slim
+++ b/app/views/folios/edit.html.slim
@@ -1,5 +1,9 @@
 - provide(:title, "Edit Folio")
 
-.jumbotron
-  h1.text-center Edit Folio
-  = render 'form'
+
+img#site-bg src="/assets/trailfolio-2.jpg"
+
+#title.container
+  .jumbotron.dk-bg
+    h1.text-center Edit Folio
+    = render 'form'
