--- a/app/views/folios/new.html.slim
+++ b/app/views/folios/new.html.slim
@@ -1,6 +1,8 @@
 - provide(:title, "New Folio")
 
-.container
-  .jumbotron
+img#site-bg src="/assets/trailfolio-2.jpg"
+
+#title.container
+  .jumbotron.dk-bg
     h1.text-center Create New Folio
     = render 'form'
