--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -1,9 +1,9 @@
 - provide(:title, "About")
 
-img#bg-home src="http://i.imgur.com/7t2RjAL.jpg?1" title="source: imgur.com"
+img#site-bg src="/assets/trailfolio-2.jpg"
 
 #title.container
-  .jumbotron
+  .jumbotron.dk-bg
     h1.text-center About
     p.lead.text-center
       | TrailFolio was created to help you discover new trails no matter where you are.
