--- a/app/views/static_pages/help.html.slim
+++ b/app/views/static_pages/help.html.slim
@@ -1,7 +1,9 @@
 - provide(:title, "Help")
 
-.container
-  .jumbotron
+img#site-bg src="/assets/trailfolio-2.jpg"
+
+#title.container
+  .jumbotron.dk-bg
     h1.text-center FAQ
     p
       | TrailFolio utilizes the HTTParty gem to pull trail data from the 
