--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,6 +1,8 @@
 - provide(:title, "Sign Up")
 
-.container
-  .jumbotron
+img#site-bg src="/assets/trailfolio-2.jpg"
+
+#title.container
+  .jumbotron.dk-bg
     h1.text-center Sign Up
     = render 'form'
