--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,7 +1,9 @@
 - provide(:title, @user.name)
 
-.container.text-center
-  .jumbotron
+img#site-bg src="/assets/trailfolio-2.jpg"
+
+#title.container.text-center
+  .jumbotron.dk-bg
     h1 Hi #{@user.name}!
     br
     hr
