--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,14 +5,18 @@
 
 body {
   font-family: 'Pontano Sans', sans-serif;
+  font-size: 14px;
+  color: #2e2d27;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
   font-family: 'La Belle Aurore', serif;
+  color: #2e2d27;
 }
 
 h3, h4, h5, h6 {
   font-family: 'Pontano Sans', sans-serif;
+  color: #2e2d27;
 }
 
 p {
@@ -23,12 +27,25 @@ a {
   color: #799c57;
 }
 
+a:hover {
+  color: #628c38;
+  text-decoration: none;
+}
+
 #title h1 {
-  color: #ffffff;
+  color: #fff;
+}
+
+#title h4 {
+  color: #fff;
 }
 
 #title p {
-  color: #ffffff;
+  color: #fff;
+}
+
+#title li {
+  color: #fff;
 }
 
 //---------navbar----------//
@@ -38,12 +55,51 @@ a {
 }
 
 .navbar-default {
-  opacity: .8;
+  opacity: .7;
+  background-color: #2e2d27;
+  border-color: #2e2d27;
+}
+
+.navbar-brand {
+  padding: 20px 15px 20px 15px;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  background-color: #2e2d27;
+  color: #fff;
+}
+
+.navbar-default .navbar-nav li a {
+  color: #fff;
+}
+
+.navbar-default .navbar-brand {
+  color: #e5dfcf;
+  font-family: 'La Belle Aurore', serif;
+  font-size: 2.25em;  
+}
+
+.navbar-default .navbar-nav li a:hover {
+  color: #e5dfcf;
+}
+
+.dropdown-menu {
+  background-color: #2e2d27;
+}
+
+.dropdown-menu li a {
+  background-color: #2e2d27;
+  color: #fff;
+}
+
+.dropdown-menu li a:hover {
+  background-color: #141411;
+  color: #fff;
 }
 
 //---------images----------//
 
-#bg-home {
+#site-bg {
   position: fixed; 
   top: 0; 
   left: 0;  
@@ -56,10 +112,18 @@ a {
 
 .jumbotron {
   padding-top: 95px;
-  padding-bottom: 18px;
+  padding-bottom: 20px;
   width: 80%;
   margin: 0 auto;
   background: transparent;
+}
+
+.jumbotron.dk-bg{
+  padding-top: 40px;
+  padding-bottom: 60px;
+  margin-top: 55px;
+  background-color: #2e2d27;
+  opacity: .8;
 }
 
 .panel-default {
@@ -76,14 +140,14 @@ a {
 button, html input[type="button"], input[type="reset"], input[type="submit"] {
   margin-top: 5px;
   margin-bottom: 15px;
-  background-color: #8EB566;
-  border-color: #8EB566;
+  background-color: #628c38;
+  border-color: #628c38;
   border: none;
 }
 
 .btn-primary {
-  background-color: #8EB566;
-  border-color: #8EB566;
+  background-color: #628c38;
+  border-color: #628c38;
 }
 
 .btn-primary:hover {
@@ -96,17 +160,53 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 .user-form {
   width: 50%;
   margin: 0 auto;
+  color: #fff;
 }
 
 .autofocus {
   border-color: #799c57;
 }
 
+input {
+ color: #2e2d27;  
+}
+
 input[type='text']:focus{
  outline:none;
- border-color: #8EB566;
+ border-color: #628c38;
+ color: #2e2d27;
+}
+
+input[type='submit'] {
+ color: #fff;  
 }
 
 select {
   margin: 10px;
+  color: #2e2d27;
 }
+
+.alert-danger {
+  background-color: #a94442;
+  border-color: #a94442;
+  color: #fff;
+}
+
+//---------tables----------//
+
+table {
+  color: #fff;
+}
+
+.panel-default {
+  background-color: #6e6d68;
+  border-color: #2e2d27;
+  opacity: .8;
+}
+
+.panel-default > .panel-heading {
+  background-color: #dddddd;
+}
+
+
+
