--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,10 +1,10 @@
 - provide(:title, "Home")
 
-img#bg-home src="http://i.imgur.com/7t2RjAL.jpg?1" title="source: imgur.com"
+img#site-bg src="/assets/trailfolio-2.jpg"
 
 #title.jumbotron.text-center
   h1 TrailFolio
   p.lead 
-    | Find trails that ignite your passion to explore!
+    | Discover trails that ignite your passion to explore!
   p
     = link_to "Sign Up To Begin!", signup_path, class: "btn btn-primary btn-lg"
