--- a/app/views/trails/show.html.slim
+++ b/app/views/trails/show.html.slim
@@ -1,30 +1,34 @@
 - provide(:title, "Show Folio") 
-.container
-  h1.text-center = @trail.name
 
-  .panel.panel-default
-    .panel-heading
-      h4 Location:
-    .panel-body
-      = @trail.city, = @trail.state 
+img#site-bg src="/assets/trailfolio-2.jpg"
 
-    .panel-heading
-      h4 Activity Type:
-    .panel-body
-      = @trail.activity_type_name
+#title.container
+  .jumbotron.dk-bg.text-center
+    h1.text-center = @trail.name
 
-    .panel-heading
-      h4 Directions:
-    .panel-body
-      = @trail.directions
+    .panel.panel-default
+      .panel-heading
+        h3 Location:
+      .panel-body
+        p = @trail.city, = @trail.state 
 
-    .panel-heading
-      h4 Description:
-    .panel-body
-      - unless @trail.description.nil?
-        = @trail.description
-      - else
-        p N/A
-      
-  p.text-center
-    = link_to "...back to previous page", :back
+      .panel-heading
+        h3 Activity Type:
+      .panel-body
+        p = @trail.activity_type_name
+
+      .panel-heading
+        h3 Directions:
+      .panel-body
+        p = @trail.directions
+
+      .panel-heading
+        h3 Description:
+      .panel-body
+        - unless @trail.description.nil?
+          = @trail.description
+        - else
+          p N/A
+        
+    p.text-center
+      = link_to "...back to previous page", :back
