--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-@import url(http://fonts.googleapis.com/css?family=La+Belle+Aurore|Pontano+Sans);
+@import url(//fonts.googleapis.com/css?family=La+Belle+Aurore|Pontano+Sans);
 
 //---------typography----------//
 
