add development page

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -13,7 +13,7 @@ nav.navbar.navbar-default.navbar-static role="navigation"
       li 
         a href="/about" About
       li  
-        a href="/help"  Help
+        a href="/development"  Development
     
     ul.nav.navbar-nav.navbar-right
       - if signed_in?
