--- a/app/views/trails/_folio_selector.html.slim
+++ b/app/views/trails/_folio_selector.html.slim
@@ -6,4 +6,4 @@
   = f.hidden_field :city, value: place["city"]
   = f.hidden_field :state, value: place["state"]
   br
-  = f.submit "Add to Folio", class: 'btn'
+  = f.submit "Add to Folio", class: 'btn btn-primary btn-lg'
