--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,6 +122,7 @@ a:hover {
   padding-top: 40px;
   padding-bottom: 60px;
   margin-top: 55px;
+  margin-bottom: 40px;
   background-color: #2e2d27;
   opacity: .8;
 }
