--- a/app/views/trails/index.html.slim
+++ b/app/views/trails/index.html.slim
@@ -29,7 +29,7 @@ img#site-bg src="/assets/trailfolio-2.jpg"
               = f.hidden_field :city, value: place["city"]
               = f.hidden_field :state, value: place["state"]
               br
-              = f.submit "Add to Folio", class: 'btn'
+              = f.submit "Add to Folio", class: 'btn btn-primary btn-lg'
             
           - else
             h4 Activities:
