--- a/app/views/trails/index.html.slim
+++ b/app/views/trails/index.html.slim
@@ -22,14 +22,15 @@ img#site-bg src="/assets/trailfolio-2.jpg"
             p = place["directions"].gsub(/&quot;/, "").gsub("<br />", " ").gsub("&lt;", "").gsub("&gt", "").gsub("br /;", " ")
           
           - if place["activities"].blank? 
-            = form_for(:trail, url: trails_path) do |f|
-              = f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]}))
-              = f.hidden_field :name, value: place["name"]
-              = f.hidden_field :directions, value: place["directions"]
-              = f.hidden_field :city, value: place["city"]
-              = f.hidden_field :state, value: place["state"]
-              br
-              = f.submit "Add to Folio", class: 'btn btn-primary btn-lg'
+            .text-center
+              = form_for(:trail, url: trails_path) do |f|
+                = f.select(:folio_id, options_for_select(@folios.map { |fo| [fo.title, fo.id]}))
+                = f.hidden_field :name, value: place["name"]
+                = f.hidden_field :directions, value: place["directions"]
+                = f.hidden_field :city, value: place["city"]
+                = f.hidden_field :state, value: place["state"]
+                br
+                = f.submit "Add to Folio", class: 'btn btn-primary btn-lg'
             
           - else
             h4 Activities:
